Edited test with Reflections

--- a/Art/Views/Artist/Artists.cshtml
+++ b/Art/Views/Artist/Artists.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<Artist>
 
 @{
-    ViewData["Title"] = "Sonjas Contact Info";
+    ViewData["Title"] = "Contact Info";
 }
     @foreach(var item in Model)
     {
