--- a/Art/Views/Artist/Details.cshtml
+++ b/Art/Views/Artist/Details.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ArtistsViewModel
 
 @{
-    ViewData["Title"] = "";
+    ViewData["Title"] = "Details";
 }
     @foreach(var item in Model.Artists)
     {
