--- a/Art/Views/Home/Index.cshtml
+++ b/Art/Views/Home/Index.cshtml
@@ -8,6 +8,9 @@
         <div class="paintings">  
              <a class="my-paintings" asp-controller="Painting" asp-action="AllPainting" >Display All Paintings </a>
         </div>
+         <div class="paintings">  
+             <a class="my-paintings" asp-controller="Painting" asp-action="GetAllType" >All Type Of Paintings </a>
+        </div>
         <div class="all-artists">
            <a class="my-artists" asp-controller="Artist" asp-action="getAllArtist">Display All Artists </a> 
        </div>
