--- a/Art/Views/Painting/AllPainting.cshtml
+++ b/Art/Views/Painting/AllPainting.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PaintingViewModel
 @{
-    ViewData["Title"] = "Sonjas Paintings";
+    ViewData["Title"] = "All Paintings";
 }
 
     @foreach(var item in Model.Paintings)
