--- a/Art/Views/Painting/GetPaintingByType.cshtml
+++ b/Art/Views/Painting/GetPaintingByType.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PaintingViewModel
 @{
-    ViewData["Title"] = "Paintings";
+    ViewData["Title"] = "Painting By type";
 }
     @foreach(var item in Model.Paintings)
     {
