--- a/Art/Views/Painting/getPainting.cshtml
+++ b/Art/Views/Painting/getPainting.cshtml
@@ -1,5 +1,7 @@
 ﻿@model PaintingViewModel
-
+@{
+    ViewData["Title"] = "Full image";
+}
     @foreach(var item in Model.Paintings)
     {
          <div class="get-container">
