--- a/Art/Views/Shared/_Layout.cshtml
+++ b/Art/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
      <link href="~/content/Artist.css" rel="stylesheet" />
      <link href="~/content/GetAllArtists.css" rel="stylesheet" />
      <link href="~/content/index.css" rel="stylesheet" /> 
+     <link href="~/content/GetAllType.css" rel="stylesheet"/>
     
 
 
